# wikiwalk

./: .dockerignore  .gitignore  .justfile  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.app  Dockerfile.build  Dockerfile.chef-app  Dockerfile.data  Dockerfile.fly  Dockerfile.service  README.md  build-graph-db  cloudbuild-app.yaml  cloudbuild-invoke-build.yaml  cloudbuild-service.yaml  cloudbuild.yaml  deploy-binaries.sh  fly.toml  graph_db.py  run-build  run-import-dumps  run.ps1  stream-build-logs  watchdog  wiki-dump-rc  wikipedia-speedrun-build.service  wikipedia-speedrun-build.timer  wikipedia-speedrun-certs  wikipedia-speedrun-certs.service  wikipedia-speedrun-certs.timer  wikipedia-speedrun-monitor  wikipedia-speedrun-watchdog  wikipedia-speedrun-watchdog.service  wikipedia-speedrun.conf  wikipedia-speedrun.service  wikiwalk-build-crontab  (+17 more)
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221201_000001_search.rs  m20221223_003023_path.rs  m20240522_190300_add_link_targets.rs
scripts/: build-db  build.ps1  run.ps1
server/: Cargo.toml  build.rs
server/src/: content_negotiation.rs  main.rs  server.rs  tls.rs
sql/: build-adjacency-list.sql  edges.sql  import-postgres.sh  page-definition.sql  pagelinks-definition.sql  vertexes.sql
src/: bfs.rs  dump.rs  edge_db.rs  main.rs  page_source.rs  pagelink_source.rs  redirect.rs  schema.rs  source.rs
src/schema/: vertex.rs
tool/: Cargo.toml
tool/src/: api.rs  dbstatus.rs  edge_db_builder.rs  fetch.rs  link_target_source.rs  main.rs  page_source.rs  pagelink_source.rs  push.rs  sitemap.rs  top_graph.rs
tool/src/testdata/: pagelinks-row-20230920.sql  pagelinks-row-20231001.sql
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui-svelte/: index.html  package.json
ui-svelte/src/: app.css
ui-svelte/src/components/: Activity.svelte
ui/src/: App.svelte  app.css
ui/src/lib/: timer.ts  wikipedia-speedrun.ts  wikiwalk.ts
wikipedia-speedrun/: Cargo.toml
wikipedia-speedrun/src/: bfs.rs  edge_db.rs  lib.rs  paths.rs  redirect.rs
wikipedia-speedrun/src/schema/: mod.rs  prelude.rs  search.rs
wikiwalk/: Cargo.toml  build.rs
wikiwalk-ui/: .env.example  .gitignore  index.html  next.config.js  package-lock.json  package.json
wikiwalk-ui/public/locales/en/: common.json
wikiwalk-ui/public/locales/es/: common.json
wikiwalk-ui/public/locales/fr/: common.json
wikiwalk-ui/src/: Activity.css  Activity.tsx  App.tsx  DarkModeToggle.tsx  DeviceSwitch.tsx  ErrorBoundary.tsx  Graph.tsx  LanguageSwitcher.tsx  PageInput.tsx  PageSummary.tsx  PathNetworkGraph.tsx  PathsDisplay.tsx  StatusPanel.tsx  ThemeProvider.tsx  TopNetworkGraph.tsx  i18n.ts  i18next.d.ts  index.css  loaders.ts  main.tsx  service.ts  storage.ts  timer.ts  useThemeMode.ts
wikiwalk-ui/src/app/: PageInput.tsx  layout.tsx  page.tsx  service.ts
wikiwalk/src/: bfs.rs  dbstatus.rs  edge_db.rs  errors.rs  lib.rs  paths.rs  redirect.rs  version.rs
wikiwalk/src/schema/: link_target.rs  mod.rs  path.rs  prelude.rs  search.rs
