[package]
name = "wikipedia-speedrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dirs = "4.0"
dotenv = "0.15.0"
indicatif = "0.17.1"
log = "*"
memmap2 = "*"
num_cpus = "1.13.1"
parse-mediawiki-sql = { version = "=0.9.0", features = ["utils"] }
spinners = "4.1.0"
stderrlog = "*"
