[package]
name = "wikipedia-speedrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1"
clap = { version = "3.0", features = ["derive"] }
dirs = "4.0"
dotenv = "0.15.0"
futures = "*"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
indicatif = "0.17.1"
log = "*"
memmap2 = "*"
memory-stats = "1.0.0"
num_cpus = "1.13.1"
parse-mediawiki-sql = { version = "=0.9.0", features = ["utils"] }
serde = "*"
spinners = "4.1.0"
stderrlog = "*"
tokio = { version = "1", features = ["full"] }
