[package]
name = "wikipedia-speedrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.2"
byteorder = "1"
clap = { version = "3.0", features = ["derive"] }
crossbeam = "*"
hex = "*"
dirs = "4.0"
dotenv = "0.15.0"
futures = "*"
sha3 = "0.10.6"
sea-orm = { version = "^0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
itertools = { version = "*" }
indicatif = { git = "https://github.com/hut8/indicatif", branch = "float-rate-limit" }
log = "*"
memmap2 = "*"
memory-stats = "1.0.0"
num_cpus = "1.13.1"
rayon = "*"
parse-mediawiki-sql = { version = "=0.9.0", features = ["utils"] }
serde = "*"
serde_json = "1.0"
sled = { version = "0.34.7", features = ["compression"] }
spinners = "4.1.0"
sqlx = { version = "*", features = ["sqlite"] }
stderrlog = "*"
tokio = { version = "1", features = ["full"] }
