[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
wikiwalk = { path = "../wikiwalk" }
log = "*"
dirs = "6.0"
sea-orm = { version = "1.1.19", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = "1.49.0"
chrono = "0.4.43"
actix-web = { version = "4.12.1" }
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] }
actix-web-static-files = { version = "4.1.1", features = ["static-files-03"] }
static-files = "0.3.1"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
actix-files = "0.6.10"
actix-cors = "0.7.0"
mime = "0.3.17"
rand = "0.10"

[build-dependencies]
static-files = "0.3.1"
