[package]
name = "tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wikiwalk = { path = "../wikiwalk" }
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "*"
hex = "*"
dirs = "5.0"
symlink = "0.1.0"
flate2 = "1.0"
futures = "*"
sha3 = "0.10.6"
reqwest = { version = "0.12.4", features = ["json","stream", "rustls-tls"], default-features = false }
sea-orm = { version = "^0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
indicatif = { version = "0.17.8" }
itertools = { version = "*" }
log = "*"
memmap2 = "*"
num_cpus = "1.13.1"
parse-mediawiki-sql = { version = "*", features = ["utils"] }
rayon = "*"
serde = "*"
serde_json = "1.0"
sqlx = { version = "*", features = ["sqlite"] }
stderrlog = "*"
tokio = { version = "1", features = ["full"] }
xml-rs = "0.8.20"
url = "2.5.1"
tokio-util = "0.7.11"
human_bytes = "0.4.3"
lrumap = "0.1.0"
sentry = { version = "0.34.0", features = ["sentry-anyhow", "sentry-log", "serde_json", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
