[package]
name = "tool"
version = "0.1.0"
edition = "2021"

[dependencies]
wikiwalk = { path = "../wikiwalk" }
anyhow = "1.0.97"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "*"
hex = "*"
dirs = "6.0"
symlink = "0.1.0"
flate2 = "1.1"
futures = "*"
sha3 = "0.10.6"
reqwest = { version = "0.12.12", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
indicatif = { version = "0.18.0" }
itertools = { version = "*" }
log = "*"
memmap2 = "*"
num_cpus = "1.13.1"
parse-mediawiki-sql = { git = "https://github.com/hut8/parse-mediawiki-sql", branch="hut8/fix-pagelinks-definition", features = ["utils"] }
rayon = "*"
serde = "*"
serde_json = "1.0"
sqlx = { version = "*", features = ["sqlite"] }
stderrlog = "*"
tokio = { version = "1", features = ["full"] }
xml-rs = "1.0.0"
url = "2.5.7"
tokio-util = "0.7.13"
human_bytes = "0.4.3"
lrumap = "0.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
