[package]
name = "wikipedia-speedrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
crossbeam = "*"
hex = "*"

anyhow = "*"
dirs = "4.0"
dotenv = "0.15.0"
flate2 = "1.0"
futures = "*"
sha3 = "0.10.6"
sea-orm = { version = "^0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
indicatif = { git = "https://github.com/hut8/indicatif", branch = "float-rate-limit" }
itertools = { version = "*" }
log = "*"
memmap2 = "*"
memory-stats = "1.0.0"
num_cpus = "1.13.1"
parse-mediawiki-sql = { version = "=0.9.0", features = ["utils"] }
rayon = "*"
rocket = "0.5.0-rc.2"
serde = "*"
serde_json = "1.0"
sqlx = { version = "*", features = ["sqlite"] }
stderrlog = "*"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
