[package]
name = "wikipedia-speedrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
futures = "*"
sea-orm = { version = "^0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
itertools = { version = "*" }
log = "*"
memmap2 = "*"
num_cpus = "1.13.1"
parse-mediawiki-sql = { version = "=0.9.0", features = ["utils"] }
serde = "*"
serde_json = "1.0"
sqlx = { version = "*", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
