[package]
name = "wikiwalk"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
futures = "*"
sea-orm = { version = "1.0.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
itertools = { version = "*" }
log = "*"
memmap2 = "*"
num_cpus = "1.13.1"
parse-mediawiki-sql = { git = "https://github.com/hut8/parse-mediawiki-sql", rev = "6e08f0d", features = [
    "utils",
] }
serde = "*"
serde_json = "1.0"
sqlx = { version = "*", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.41"
dirs = "6.0.0"
thiserror = "2.0.12"
anyhow = "1.0.97"

[build-dependencies]
vergen = { version = "8.3.2", features = ["gitoxide", "git"] }
